MailZu-ng 0.12.mailzu-ng-php72-2767ae9+1 (13.12.2022)
---------
  - Merged administrators.
  - Fixed an error message.
  - In the printSearchEngine function replaced the 'My Reservations' with 'Search' so that help
    functions properly.
  - Fixed issue with the display of the mail id in the quarantine screen and search.  Issue was
    that, with $conf['app']['allowMailid'] enabled, a normal user is allowed to search on mail
    id but the mail id was is not shown. Similarly, when the user is an administrator, the
    search window would always show a search on mail id, also when the administrator is
    navigating in his own personal USER quarantine and $conf['app']['allowMailid'] is disabled,
    which is the default.
  - When the mail id is shown, it always shows a partition tag of '[0]'. This is the Amavis
    default value and effectively means no partition (or in reality, one large partition). The
    sql query by default returns a zero partition tag because that is the default value in
    the database.
  - Updated README.md.

MailZu-ng 0.12.mailzu-ng-php72-02200be+1 (13.12.2022)
---------
  - Merged administrators.
  - Added translations for "Block images" and "Load images".

MailZu-ng 0.12.mailzu-ng-php72-5275fc3+1 (13.12.2022)
---------
  - Merged administrators.
  - Built in the hooks to reach the DA code but disabled by default.

MailZu-ng 0.12.mailzu-ng-php72-ec22fcc+1 (13.12.2022)
---------
  - Corrected error messages.

MailZu-ng 0.12.mailzu-ng-php72-6b7c25f+1 (12.12.2022)
---------
  - Merged administrators.
  - Fixed the send EMail to the administrator so that it now retrieves the From Address from
    the users table in the amavis database (getFromMAilAddr). For this update to work properly
    the users table needs to track the external authentication system(s).
  - Fixed invocation of the mailer class so that it does not throw external exceptions.

MailZu-ng 0.12.mailzu-ng-php72-8b9c7c5+1 (12.12.2022)
---------
  - Merged administrators.